src/style.css
/* Custom font - Poppins */
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500&family=Roboto:wght@300;500&display=swap');

/* Declare some variables */
:root {
    --gradient-color-1: #fb41f8;
    --gradient-color-2: #7c78ff;
    --translucent-bg-color: rgba(116, 113, 142, 0.1);
    --translucent-bg-color-2: rgba(116, 113, 142, 0.15);
    --translucent-bg-color-3: rgba(116, 113, 142, 0.25);
}

html {
    height: 100%;
    width: 100%;
    background-color: #1c0c2e;
}

body {
    font-family: 'Poppins';
}

.divider {
    background-color: #454545;
    border: none;
    height: 1px;
}

.project-header {
    display: flex;
    margin-top: -10px;
}

.project-title {
    background: -webkit-linear-gradient(45deg, var(--gradient-color-1), var(--gradient-color-2));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    inline-size: 250px;
    word-break: break-all;
    hyphens: manual;
    font-size: 20px;
    margin-left: 20px;
    margin-top: 38px;
}

.project-card-title {
    font-size: 20px;
}

.links {
    position: absolute;
    bottom: 0px;
    margin-bottom: 25px;
}

.project-version {
    position: relative;
    color: gray;
    font-size: 16px;
    margin-bottom: -2px;
}

.project-tag {
    margin-top: -10px;
    padding: 8px 10px;
    font-size: 14px;
    border-radius: 20px;
}

.mod-tag {
    border:#708f28 2px solid;
    color: #708f28;
}

.plugin-tag {
    border:#d62e5e 2px solid;
    color: #d62e5e;
}

.theme-tag {
    border:#dc7e2b 2px solid;
    color: #dc7e2b;
}

.website-tag {
    border:#279f77 2px solid;
    color: #279f77;
}

.project-description {
    color: #adadad;
    line-height: 24px;
    margin: 0px 20px;
    max-width: 400px;
    font-weight: 300;
}

.project-link {
    color: #3f8bee;
    text-decoration: none;
    margin: 25px 20px 0px 20px;
    background-color: var(--translucent-bg-color-2);
    padding: 15px 15px 10px 15px;
    border-radius: 15px;
    transition: all .1s;
    max-height: 30px;
}

.project-link:hover {
    background-color: var(--translucent-bg-color-3);
    border-radius: 10px;
}

.project-footer {
    display: flex;
    justify-content: space-between;
    margin: 50px 20px 20px 20px;
}

.spacer {
    flex: 1;
}

.pg-title {
    color: white;
    font-size: 28px;
    width: 100%;
    text-align: center;
}

#project-list {
    display: grid;
}

.project-view {
    background-color: var(--translucent-bg-color);
    margin: 18px -10px;
    border-radius: 20px;
    color: #ADADAD;
    display: flex;
    flex-direction: column;
    animation: project-ease-in 1000ms ease-out;
}

.back-button {
    margin-left: 0px; 
    font-family: 'Poppins'; 
    font-size: 18px;
}

#view-projects-txt {
    margin-top: 60px;
}

#title {
    color: white;
    font-weight: bold;
    /* 57 for tablets */
    margin-top: -20px;
    margin-bottom: -45px;
    text-align: center;
}

.title-text {
    font-weight: 200;
    font-size: 60px;
    width: 100%;
    text-align: center;

    animation: title-text-anim 1000ms ease-out;
}

#description {
    color: gray;
    font-size: 24px; /* 35px for tablets */
    text-align: center;
    margin-top: -20px;
}

#socials {
    background-color: var(--translucent-bg-color);
    padding: 10px;
    border-radius: 20px;
    margin: 20px 0px 20px 20px;
    display: inline-block;
    align-items: center;
}

#main-pg-header {
    width: 100%;
    text-align: center;
}

.project-authors {
    position: relative;
    color: gray;
    margin: 20px;
    margin-top: -1px;
}

.social {
    border-radius: 20px;
    margin: 10px 15px;
    box-shadow: 0px 7px 20px rgba(0, 0, 0, .3);
    transition: transform 0.2s, box-shadow 0.2s, border-radius 0.2s;
    width: 45px;
    height: 45px;
}

.social:hover {
    transform: scale(1.1);
    box-shadow: 0px 7px 20px rgba(0, 0, 0, .5);
}

.link {
    text-decoration: none;
    vertical-align: bottom;
}

#line-view-projects {
    margin-top: -25px;
    margin-bottom: 50px;
    background-color: #454545;
    border: none;
    height: 1px;
}

#view-projects-view {
    display: grid;
    grid-template-columns: 80%;
    gap: 40px;
    justify-content: center;
}

.view-project-card {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--translucent-bg-color);
    border-radius: 20px;
    padding: 10px 20px;
}

.view-project-card:nth-child(2) {
    animation: title-card-ease-in 1200ms ease-in-out;
}

.view-project-card:nth-child(1) {
    opacity: 0;
    transform: translateY(-3%);
    animation: title-card-side-ease-in 1400ms ease-in-out 200ms;
    animation-fill-mode: forwards;
}

.view-project-card:nth-child(3) {
    opacity: 0;
    transform: translateY(-3%);
    animation: title-card-side-ease-in 1400ms ease-in-out 200ms;
    animation-fill-mode: forwards;
}

.project-card-title {
    display: inline-block;
    background: -webkit-linear-gradient(45deg, var(--gradient-color-1), var(--gradient-color-2));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-weight: bold;
}

button {
    font-weight: 200;
    display: inline-block;
    padding: 15px 25px;
    text-decoration: none;
    font-weight: 100;
    box-shadow: 10px 5px 10px rgba(0, 0, 0, 0.1);
    border-radius: 40px;
    margin: 40px 20px 20px;
    border: none;
    transition: transform 0.2s, border-radius 0.2s;
    position: relative;
    font-family: 'Poppins';
    font-size: 16px;
    cursor: pointer;

    transition: transform .2s, border-radius .2s;
}

.project-card-button {
    background-image: linear-gradient(
        45deg, 
        #CA2CC7, 
        #465FDF
    );
    color: white;
}

button:hover {
    transform: scale(1.03);
    border-radius: 20px;
}

#clear {
    outline: #f44336 1px solid;
    color: red;
    background: none;
}

#output-text {
    color: white;
}

.output-container {
    background:var(--translucent-bg-color);
    padding: 20px;
    border-radius: 20px;
    width: 65%;
    margin: 0 auto;
    text-align: center;
    margin-top: 20px;
}

.tool-title {
    width: 100%;
    text-align: center;
    font-size: 30px;
    margin-top: -20px;
}

.container {
    max-width: 1580px;
    margin: 0 auto;
    padding: 20px 20px 80px;
}

.cite-generator-container {
    position: relative;
    display: flex;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    width: 65%;
    justify-content: center;
    flex-direction: column;
    background: var(--translucent-bg-color);
    border-radius: 20px;
    padding: 20px;
    margin-top: 60px;
}

input {
    display: inline;
    width: 85%;
    padding: 20px;
    border-radius: 20px;
    border: rgba(0, 0, 0, 0);
    background-color: rgba(100, 100, 100, .2);
    font-family: 'Poppins';
    color: white;
    transition: border 0.1s;
}

input:focus {
    outline:none;
    border: 1px solid #CA2CC7;
    border-radius: 20px;
}

#form-container {
    display: grid;
    grid-template-columns: auto;
    gap: 20px;
}

.tool-page-description {
    color: gray;
    text-align: center;
    margin-left: 20px;
    margin-right: 20px;
    margin-top: -10px;
    justify-content: center;
}

/* Scrollbar handling */
::-webkit-scrollbar {
    width: 15px;
    padding-left: -10px;
}

::-webkit-scrollbar-track {
    border-radius: 5px;
}

::-webkit-scrollbar-thumb {
    background: var(--translucent-bg-color); 
    border-radius: 5px;
}

::-webkit-scrollbar-thumb:hover {
    background: rgba(116, 113, 142, 0.14);
    border-radius: 10px;
}

/* Tablets */
@media only screen and (min-width: 767px) {
    #project-list {
        display: grid;
        grid-template-columns: 50% 50%;
    }

    .project-link {
        color: #3f8bee;
        text-decoration: none;
        margin: 30px 20px 20px 20px;
    }

    .back-button {
        margin-left: 20px;
    }
    
    #view-projects-view {
        grid-template-columns: 40% 40%;
    }

    .project-title {
        font-size: 24px;
        inline-size: 300px;
    }

    #title {
        font-size: 80px;
    }
    
    #description {
        font-size: 35px;
        margin-top: -40px;
    }

    .project-card-title {
        font-size: 20px;
    }

    .pg-title {
        font-size: 40px;
    }

    .project-view {
        width: 92%;
        margin: 18px;
    }

    .social {
        border-radius: 20px;
        margin: 10px 20px;
        box-shadow: 0px 7px 20px rgba(0, 0, 0, .3);
        transition: transform 0.2s;
        width: 55px;
        height: 55px;
    }

    .divider {
        margin: 20px;
    }
}

/* Computers */
@media only screen and (min-width: 1220px) {
    #project-list {
        display: grid;
        grid-template-columns: 33% 34% 33%;
    }    

    #view-projects-view {
        grid-template-columns: 22% 22% 22%;
    }
    
    .project-title {
        inline-size: 300px;
        word-break: break-all;
        hyphens: manual;
        font-size: 24px;
    }

    #form-container {
        grid-template-columns: auto auto;
    }

    .tool-title {
        font-size: 42px;
    }

    .output-container {
        width: 55%;
    }

    .cite-generator-container {
        width: 55%;
    }

    input {
        width: 90%;
    }
    
    .title-text {
        font-size: 80px;
    }
}

/* Animations */
@keyframes title-card-ease-in {
    0% {
        opacity: 0;
        transform: translateY(-3%);
    }

    100% {
        opacity: 100;
    }
}

@keyframes title-card-side-ease-in {
    0% {
        opacity: 0;
        transform: translateY(-3%);
    }

    10% {
        opacity: 0;
    }

    100% {
        opacity: 100;
        transform: translateY(0%);
    }
}

@keyframes project-ease-in {
    0% {
        opacity: 0;
    }

    10% {
        transform: translateY(-3%);
        opacity: 0;
    }

    90% {
        opacity: 50;
    }

    100% {
        transform: translateY(0);
        opacity: 100;
    }
}

@keyframes title-text-anim {
    0% {
        transform: scale(0.95);
        opacity: 0;
    }

    100% {
        transform: scale(1);
        opacity: 100;
    }
}

